--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
             <div class="main_projects">
               <h2>Projects</h2>
               <div class="main_projects_items">
+                <a href="lumorica" href='https://lumorica.netlify.app'>Lumorica</a>
                 <a class='food' href="https://food-kelpie.netlify.app">Food</a>
                 <a class="uber" href="https://uber-proj.netlify.app">Uber</a>
                 <a class="course-wp" href="https://course-wp.netlify.app"
